# Regression-Lineaire

./: README.md  main_jupyter.html  setup.cfg
mathstats/: main.py  model_lineaire.py  random_simulation.py
test/: main_jupyter.ipynb  test_fonction_implemente.py  test_model_lineaire.py  test_random_simulation.py
