[metadata]
name = mathstats
version = attr: mathstats.__version__
description = My package description
long_description = file: README.md

[options]
packages = find:
requirements = [ "numpy","matplotlib"," scipy", "seaborn" , "pandas", "pylab" ]
#install_requires = [ "numpy","matplotlib"," scipy", "seaborn" , "pandas", "pylab" ]